--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "pkief.material-icon-theme",
     "formulahendry.auto-close-tag",
     "formulahendry.auto-complete-tag",
     "formulahendry.auto-rename-tag",
@@ -27,7 +28,18 @@
     "charliermarsh.ruff",
     "emeraldwalk.runonsave",
     "simonsiefke.svg-preview",
-    "vscode-icons-team.vscode-icons",
-    "redhat.vscode-yaml"
+    "redhat.vscode-yaml",
+    "kisstkondoros.vscode-gutter-preview",
+    "graphql.vscode-graphql",
+    "graphql.vscode-graphql-syntax",
+    "usernamehw.errorlens",
+    "dsznajder.es7-react-js-snippets",
+    "burkeholland.simple-react-snippets",
+    "quicktype.quicktype",
+    "pmneo.tsimporter",
+    "golang.go",
+    "zxh404.vscode-proto3",
+    "vscodevim.vim",
+    "andenetalexander.vim-cheatsheet"
   ]
 }
